@@ -12,6 +12,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2905629 [auth] Blowfish secret is not hashed 
 - bug #2910000 [gui] ShowServerInfo should hide all server info from main page 
 - bug #2910568 [structure] Table size for ARCHIVE tables is not displayed 
+- patch #2899969 [core] Session lock blocks working from a second window,
+  thanks to Greg Roach - fisharebest
 
 3.2.4.0 (2009-12-02)
 - bug [engines] Innodb_buffer_pool_pages_latched no longer returned in status 
